--- a/shippable.yml
+++ b/shippable.yml
@@ -27,3 +27,5 @@ after_script:
   - mongo test --eval "db.dropDatabase()"
   - ./node_modules/.bin/istanbul cover grunt -- -u tdd
   - ./node_modules/.bin/istanbul report cobertura --dir  shippable/codecoverage/
+
+build_image: drydock/u14nodpls:tip 
